--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -79,6 +79,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 </body>
-<script src="/main.js"></script>
-<script src="/show.js"></script>
+<script src="/js/main.js"></script>
+<script src="/js/show.js"></script>
+
 </html>
