--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -207,5 +207,7 @@
         crossorigin="anonymous"></script>
 
 <script src="/js/main.js"></script>
+<script src="/js/index.js"></script>
+
 </body>
 </html>
