--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -29,7 +29,7 @@
 
                 <div sec:authorize="hasRole('ADMIN')">
                     <li class="nav-item ">
-                        <a class="nav-link" href="/admin/users">Admin</a>
+                        <a class="nav-link" href="/admin">Admin</a>
                     </li>
                 </div>
 
